changed nav tyles.

--- a/UAV-IQ-Marketing/app/droneOperators.html
+++ b/UAV-IQ-Marketing/app/droneOperators.html
@@ -43,7 +43,7 @@
       <div class="container">
         <h1 class="display-3">Post-Flight Cloud Data Processing. No Further Investment Required</h1>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">GET STARTED NOW</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Get Started Now</a>
         </p>
 
         <div class="down">
@@ -100,7 +100,7 @@ We'll also provide a storage solution so customers can compare current to past r
             <input type="text" name="Work Email" value="" placeholder="Work Email:">
           </div>
           <div class="col-sm-12 col-md-4">
-            <button type="submit" name="button">GET STARTED NOW</button>
+            <button type="submit" name="button">Get Started Now</button>
           </div>
         </form>
       </div>
@@ -146,7 +146,7 @@ We'll also provide a storage solution so customers can compare current to past r
         </div>
 
         <div class="col-sm-12">
-          <a href="#"><button type="submit" name="button">GET STARTED NOW</button></a>
+          <a href="#"><button type="submit" name="button">Get Started Now</button></a>
         </div>
       </div>
     </div>
@@ -223,7 +223,7 @@ We'll also provide a storage solution so customers can compare current to past r
 
           <div class="col-sm-12">
             <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
-            <button type="button" name="button">SEND</button>
+            <button type="button" name="button">Send</button>
           </div>
         </form>
       </div>
