--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -44,7 +44,7 @@
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">TALK TO US</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Talk To Us</a>
           <span>to create a FREE account</span>
         </p>
 
