--- a/UAV-IQ-Marketing/app/instafarm.html
+++ b/UAV-IQ-Marketing/app/instafarm.html
@@ -47,7 +47,7 @@
         <h1 class="display-3">From Data to Better Yields</h1>
         <p>Enterprise software to make the most of your field knowledge and remote sensing data. *Observe, Orient, Decide, Act</p>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up »</a>
           <span>to create a free demo account</span>
         </p>
         <div class="app col-sm-3 col-md-3 col-lg-4">
