created script to make jumbotron same height.

--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png');">
+    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.jpg');">
       <div class="container">
         <h1 class="display-3">On-Demand Aerial Scouting</h1>
         <p>Let drones and professional grade sensors help you detect what your eyes can’t</p>
