--- a/UAV-IQ-Marketing/app/droneOperators.html
+++ b/UAV-IQ-Marketing/app/droneOperators.html
@@ -11,7 +11,7 @@
   <body class="operators">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
+      <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home</a>
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/computer.png');">
+    <div class="jumbotron" style="background-image: url('img/BG/computer.png');">
       <div class="container">
         <h1 class="display-3">Post-Flight Cloud Data Processing. No Further Investment Required</h1>
         <p class="button">
