--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -11,7 +11,7 @@
   <body class="ourProducts">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
+      <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home</a>
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/BG_Our_Products.png');">
+    <div class="jumbotron" style="background-image: url('img/BG/BG_Our_Products.png');">
       <div class="container col-sm-12 col-md-7 col-lg-7">
         <div class="subcontainer">
           <h1 class="display-3">Products and services</h1>
