made changes based on the exel sheet.

--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -13,11 +13,8 @@
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="datacollection.html">Data Collection</a>
+          <a class="nav-link" href="our_pruducts.html">Products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Enterprise software</a>
@@ -27,10 +24,16 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="our_pruducts.html">Our Products</a>
+          <a class="nav-link" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="droneOperators.html">Drone Operators</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Blog</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Contact Us</a>
         </li>
       </ul>
 
@@ -151,7 +154,7 @@
           <div class="">
             <img class="image" src="img/transsfere.png" alt="" />
             <p>Already have an imagery provider and are interested in using our tools?</p>
-            <button type="button" name="button">Utilize your data on our Apps</button>
+            <button type="button" name="button">Utilize our Apps</button>
           </div>
         </div>
       </div>
