--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -11,7 +11,7 @@
   <body class="datacollection">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Products</a>
