--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -10,8 +10,8 @@
   </head>
   <body class="home">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
+      <div class="droneOperators"><p class="trn">Are you a drone operator or a farmer flying your own drone? <button type="button" name="button" class="trn">GET STARTED NOW</button></p></div>
+      <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Products</a>
@@ -44,14 +44,14 @@
 
     <div class="jumbotron" style="background-image: url('img/TV-Colchagua.jpg');">
       <div class="container col-sm-12 col-md-12 col-lg-7">
-        <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
-        <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
+        <h1 class="display-3 trn">Wondering How To Make Remote Sensing Work For You?</h1>
+        <p class="trn">Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Talk To Us</a>
-          <span>to create a FREE account</span>
+          <a class="btn btn-primary btn-lg trn" href="#" role="button">Talk To Us</a>
+          <span class="trn">to create a FREE account</span>
         </p>
       </div>
-      <div class="ipad col-sm-12 col-md-12 col-lg-5">
+      <div class="ipad trn col-sm-12 col-md-12 col-lg-5">
         <img src="img/Home-Page-banner.png" alt="" />
       </div>
       <img class="banner" src="img/Home-Page-banner.png" alt="" />
@@ -60,20 +60,20 @@
 
     <div class="container-fluid">
       <div id="industries" class="row">
-        <h1 class="section-header">Use Aerial Imagery for Better Farm Management</h1>
-        <h3 class="section-sub-header">PICK YOUR INDUSTRY:</h3>
+        <h1 class="section-header trn">Use Aerial Imagery for Better Farm Management</h1>
+        <h3 class="section-sub-header trn">PICK YOUR INDUSTRY:</h3>
         <div class="col-sm-12 col-md-4 col-md-offset-2">
           <a href="wineflight.html">
             <img src="img/Home-Page_Wine Industry.png" alt=""/>
-            <h2>Wine Industry</h2>
-            <p>Learn more >></p>
+            <h2 class="trn">Wine Industry</h2>
+            <p class="trn">Learn more >></p>
           </a>
         </div>
         <div class="col-sm-12 col-md-4">
           <a href="instafarm.html">
             <img src="img/Home-Page_Avocado.png" alt=""/>
-            <h2>Fruit & Nut Production</h2>
-            <p>Learn more >></p>
+            <h2 class="trn">Fruit & Nut Production</h2>
+            <p class="trn">Learn more >></p>
           </a>
         </div>
 
@@ -83,8 +83,8 @@
 
     <div class="container-fluid">
       <div id="issue" class="row">
-        <h1 class="section-header">Identify Trends, Examine Localized Issues…</h1>
-        <h3 class="section-sub-header">IMPROVE YOUR RESULTS</h3>
+        <h1 class="section-header trn">Identify Trends, Examine Localized Issues…</h1>
+        <h3 class="section-sub-header trn">IMPROVE YOUR RESULTS</h3>
         <div>
           <img class="asset" src="img/3_zoom_levels.png" alt=""/>
           <img class="second-asset" src="img/zoom-mobile.png" alt="" />
@@ -94,16 +94,16 @@
 
     <div class="container-fluid">
       <div id="observe" class="row">
-        <h1 class="section-header">Observe - Orient - Decide - Act</h1>
-        <h3 class="section-sub-header">Collaborate with your team.
+        <h1 class="section-header trn">Observe - Orient - Decide - Act</h1>
+        <h3 class="section-sub-header trn">Collaborate with your team.
           <br>Unlock the value of your data.</h3>
         <div class="wrap">
           <div class="col-sm-12 col-lg-5 left">
             <ul>
-              <li>Intuitive displays and precise ground details allow you to rapidly assess your fields <img src="img/Oval.png" alt="" /></li>
-              <li>Compare images from different time periods or view different contrasts from the same flight <img src="img/Oval.png" alt="" /></li>
-              <li>Task team members with targeted inspection requests <img src="img/Oval.png" alt="" /></li>
-              <li>Take geolocalized field notes and pictures <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Intuitive displays and precise ground details allow you to rapidly assess your fields</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Compare images from different time periods or view different contrasts from the same flight</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Task team members with targeted inspection requests</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Take geolocalized field notes and pictures</span> <img src="img/Oval.png" alt="" /></li>
             </ul>
           </div>
           <div class="col-sm-12 col-lg-2">
@@ -112,11 +112,11 @@
           </div>
           <div class="col-sm-12 col-lg-5 right">
             <ul>
-              <li>Agriculture data is not only used once - index and store your data for future use <img src="img/Oval.png" alt="" /></li>
-              <li>Offline data collection for operating in remote fields <img src="img/Oval.png" alt="" /></li>
-              <li>Recall prior observations at any time - in the field or the office <img src="img/Oval.png" alt="" /></li>
-              <li>Define zones for efficient variable rate cultivation <img src="img/Oval.png" alt="" /></li>
-              <li>Incorporate historic data such as yield maps <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Agriculture data is not only used once - index and store your data for future use</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Offline data collection for operating in remote fields</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Recall prior observations at any time - in the field or the office</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Define zones for efficient variable rate cultivation</span> <img src="img/Oval.png" alt="" /></li>
+              <li><span class="trn">Incorporate historic data such as yield maps</span> <img src="img/Oval.png" alt="" /></li>
             </ul>
           </div>
         </div>
@@ -125,7 +125,7 @@
 
     <div class="container-fluid">
       <div id="advert" class="row">
-        <h4>featured in</h4>
+        <h4 class="trn">featured in</h4>
         <div class="col-sm-4">
           <span></span>
           <img src="img/logo_Agro_TV.gif" alt="" />
@@ -146,15 +146,15 @@
         <div class="col-sm-6 option">
           <div class="">
             <img class="image" src="img/drone-large.png" alt="" />
-            <p>Want to start using the tools but need an imagery provider?</p>
-            <button type="button" name="button">Book a flight now</button>
+            <p class="trn">Want to start using the tools but need an imagery provider?</p>
+            <button type="button" name="button" class="trn">Book a flight now</button>
           </div>
         </div>
         <div class="col-sm-6 option">
           <div class="">
             <img class="image" src="img/transsfere.png" alt="" />
-            <p>Already have an imagery provider and are interested in using our tools?</p>
-            <button type="button" name="button">Utilize our Apps</button>
+            <p class="trn">Already have an imagery provider and are interested in using our tools?</p>
+            <button type="button" name="button" class="trn">Utilize our Apps</button>
           </div>
         </div>
       </div>
@@ -221,6 +221,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/jquery.translate.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
