--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -11,7 +11,7 @@
   <body class="ourProducts">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Products</a>
@@ -108,6 +108,10 @@
           </div>
         </div>
 
+
+        <div class="interest">
+          <h4><span>Interested in custom indeces or additional products?</span><button type="button" name="button">Contact Us</button></h4>
+        </div>
       </div>
     </div>
 
