edited style components for several pages. drone operators, data collection and our products.

--- a/UAV-IQ-Marketing/app/droneOperators.html
+++ b/UAV-IQ-Marketing/app/droneOperators.html
@@ -10,7 +10,6 @@
   </head>
   <body class="operators">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
@@ -78,7 +77,7 @@ We'll also provide a storage solution so customers can compare current to past r
 
         <div class="col-sm-12 col-md-4">
           <img src="img/Data collection_How it works 3.png" alt=""/>
-          <h2>Delivery on First of the Class Ag Tool</h2>
+          <h2>Delivery to Best in Class Agriculture Decision Making Tools</h2>
           <p>
             We built the tools your clients need to make the most of their data
           </p>
