--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -10,30 +10,30 @@
   </head>
   <body class="ourProducts">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
+      <div class="droneOperators"><p><span class="trn">Are you a drone operator or a farmer flying your own drone?</span> <button class="trn" type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="our_pruducts.html">Products</a>
+          <a class="nav-link" href="our_pruducts.html"><span class="trn">Products</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Enterprise software</a>
+          <a class="nav-link" href="#"><span class="trn">Enterprise Software</span></a>
           <ul>
-           <li><a class="nav-link" href="wineflight.html">Wine Flight</a></li>
-           <li><a class="nav-link" href="instafarm.html">Instafarm</a></li>
+           <li><a class="nav-link trn" href="wineflight.html">Wine Flight</a></li>
+           <li><a class="nav-link trn" href="instafarm.html">Instafarm</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="datacollection.html">Data Collection</a>
+          <a class="nav-link trn" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="droneOperators.html">Drone Operators</a>
+          <a class="nav-link trn" href="droneOperators.html">Drone Operators</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Blog</a>
+          <a class="nav-link trn" href="index.html">Blog</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Contact Us</a>
+          <a class="nav-link trn" href="index.html">Contact Us</a>
         </li>
       </ul>
 
@@ -45,8 +45,8 @@
     <div class="jumbotron" style="background-image: url('img/BG/BG_Our_Products.png');">
       <div class="container col-sm-12 col-md-7 col-lg-7">
         <div class="subcontainer">
-          <h1 class="display-3">Products and services</h1>
-          <p>Highly informative imagery products ready for immediate use - without a learning curve</p>
+          <h1 class="display-3 trn">Products and services</h1>
+          <p class="trn">Highly informative imagery products ready for immediate use - without a learning curve</p>
         </div>
       </div>
 
@@ -64,28 +64,28 @@
         <div class="">
           <div class="col-sm-12 col-md-6">
             <img src="img/polygon side to side without area size.png" alt=""/>
-            <h2>Crop Health Assessment </h2>
-            <h3>(NDVI or other indexes by request)</h3>
-            <p>Precise assesment, row by row, plant by plant.</p>
-            <p>Detect stress caused by pests, irrigation issues, nutrition deficiencies.</p>
-            <p>Identify and monitor movement of zonal boundaries</p>
+            <h2 class="trn">Crop Health Assessment </h2>
+            <h3 class="trn">(NDVI or other indexes by request)</h3>
+            <p class="trn">Precise assesment, row by row, plant by plant.</p>
+            <p class="trn">Detect stress caused by pests, irrigation issues, nutrition deficiencies.</p>
+            <p class="trn">Identify and monitor movement of zonal boundaries</p>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <img src="img/ndvi + zone map.png" alt=""/>
-            <h2>Zone Maps</h2>
-            <p>Maps specifically designed to show trends help you find the signal in the noise.</p>
-            <p>Identify trends before examining spot issues</p>
-            <p>Helps you implement variable rate cultivation and selective harvest </p>
+            <h2 class="trn">Zone Maps</h2>
+            <p class="trn">Maps specifically designed to show trends help you find the signal in the noise.</p>
+            <p class="trn">Identify trends before examining spot issues</p>
+            <p class="trn">Helps you implement variable rate cultivation and selective harvest </p>
           </div>
         </div>
 
         <div class="">
           <div class="col-sm-12 col-md-6 col-md-offset-3">
             <img src="img/transparency level.png" alt=""/>
-            <h2>Multiple Contrasts and Ground Detail</h2>
-            <p>Utilizing multiple contrasts help your eyes detect different details.</p>
-            <p>Viewing images that show high definition ground detail along with your crop status enables more precise field work</p>
+            <h2 class="trn">Multiple Contrasts and Ground Detail</h2>
+            <p class="trn">Utilizing multiple contrasts help your eyes detect different details.</p>
+            <p class="trn">Viewing images that show high definition ground detail along with your crop status enables more precise field work</p>
           </div>
         </div>
 
@@ -93,24 +93,24 @@
         <div class="premium">
           <div class="col-sm-12 col-md-6">
             <img src="img/Elevation_Maps.png" alt=""/>
-            <h2>Elevation Maps</h2>
-            <p>Helps explain performance when compared to health maps and other imagery products</p>
-            <p>Can be used to predict how your field will react to changing variables</p>
-            <p>Serves as the basis for more advanced analysis such as solar/shade analysis, soil erosion evaluation and hydrology charts.</p>
+            <h2 class="trn">Elevation Maps</h2>
+            <p class="trn">Helps explain performance when compared to health maps and other imagery products</p>
+            <p class="trn">Can be used to predict how your field will react to changing variables</p>
+            <p class="trn">Serves as the basis for more advanced analysis such as solar/shade analysis, soil erosion evaluation and hydrology charts.</p>
           </div>
 
           <div class="col-sm-12 col-md-6">
             <img src="img/Product_hydrology.png" alt=""/>
-            <h2>Hydrology Charts</h2>
-            <p>Predict where water will pool on your field</p>
-            <p>Determine water flow direction and velocity across your fields</p>
-            <p>Can be used to optimize irrigation design & to help diagnose crop stress</p>
+            <h2 class="trn">Hydrology Charts</h2>
+            <p class="trn">Predict where water will pool on your field</p>
+            <p class="trn">Determine water flow direction and velocity across your fields</p>
+            <p class="trn">Can be used to optimize irrigation design & to help diagnose crop stress</p>
           </div>
         </div>
 
 
         <div class="interest">
-          <h4><span>Interested in custom indeces or additional products?</span><button type="button" name="button">Contact Us</button></h4>
+          <h4><span class="trn">Interested in custom indeces or additional products?</span><button class="trn" type="button" name="button">Contact Us</button></h4>
         </div>
       </div>
     </div>
@@ -118,29 +118,29 @@
     <div class="container-fluid">
 
       <div id="work" class="row">
-        <h1 class="section-header">Specialized Projects</h1>
-        <p>
+        <h1 class="section-header trn">Specialized Projects</h1>
+        <p class="trn">
           In conjunction with our engineering partners, UAV-IQ can work with you to meet your specific needs. Whether you want to evaluate a new location, design an irrigation system, certify compliance with local regulations or accomplish something never done before, we're ready to help.
         </p>
 
         <h3>Some examples:</h3>
         <ul class="col-sm-6">
-          <li>Irrigation design</li>
-          <li>Environmental Site Assessment (ESA)</li>
-          <li>Critical Issues Analysis (CIA)</li>
-          <li>Soil Mapping</li>
-          <li>Agricultural Erosion Control Plan</li>
+          <li class="trn">Irrigation design</li>
+          <li class="trn">Environmental Site Assessment (ESA)</li>
+          <li class="trn">Critical Issues Analysis (CIA)</li>
+          <li class="trn">Soil Mapping</li>
+          <li class="trn">Agricultural Erosion Control Plan</li>
         </ul>
 
         <ul class="col-sm-6">
-          <li>Survey grade Topographic Mapping</li>
-          <li>Hydrologic and Hydraulic Analysis</li>
-          <li>Land Potential Assessment</li>
-          <li>Ground sensor integration</li>
+          <li class="trn">Survey grade Topographic Mapping</li>
+          <li class="trn">Hydrologic and Hydraulic Analysis</li>
+          <li class="trn">Land Potential Assessment</li>
+          <li class="trn">Ground sensor integration</li>
         </ul>
 
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
+          <a class="btn btn-primary btn-lg trn" href="#" role="button">SIGN UP »</a>
         </p>
 
       </div>
@@ -149,10 +149,10 @@
     <div class="container-fluid">
       <div id="advance-research" class="row">
         <div class="col-sm-12">
-          <h1 class="section-header">Advanced Research Capabilities</h1>
-          <h2>UAV-IQ also offers expertise to clients and partners who are conducting agricultural research. </h2>
-          <p>By leveraging its experience in database strategy, the company can support small to medium sized research projects on its existing infrastructure and it can design, implement and support infrastructure dedicated to large-scale projects.</p>
-          <p>Fully licensed by the FAA, the company offers the ability to conduct research flights 12 months a year through its operations in both hemispheres and can incorporate additional sensor types and data sets, both historic and newly acquired.</p>
+          <h1 class="section-header trn">Advanced Research Capabilities</h1>
+          <h2 class="trn">UAV-IQ also offers expertise to clients and partners who are conducting agricultural research. </h2>
+          <p class="trn">By leveraging its experience in database strategy, the company can support small to medium sized research projects on its existing infrastructure and it can design, implement and support infrastructure dedicated to large-scale projects.</p>
+          <p class="trn">Fully licensed by the FAA, the company offers the ability to conduct research flights 12 months a year through its operations in both hemispheres and can incorporate additional sensor types and data sets, both historic and newly acquired.</p>
         </div>
       </div>
     </div>
@@ -219,6 +219,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/jquery.translate.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
