--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -10,30 +10,30 @@
   </head>
   <body class="wineflight">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
+      <div class="droneOperators"><p><span class="trn">Are you a drone operator or a farmer flying your own drone?</span> <button class="trn" type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="our_pruducts.html">Products</a>
+          <a class="nav-link" href="our_pruducts.html"><span class="trn">Products</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Enterprise software</a>
+          <a class="nav-link" href="#"><span class="trn">Enterprise Software</span></a>
           <ul>
-           <li><a class="nav-link" href="wineflight.html">Wine Flight</a></li>
-           <li><a class="nav-link" href="instafarm.html">Instafarm</a></li>
+           <li><a class="nav-link trn" href="wineflight.html">Wine Flight</a></li>
+           <li><a class="nav-link trn" href="instafarm.html">Instafarm</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="datacollection.html">Data Collection</a>
+          <a class="nav-link trn" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="droneOperators.html">Drone Operators</a>
+          <a class="nav-link trn" href="droneOperators.html">Drone Operators</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Blog</a>
+          <a class="nav-link trn" href="index.html">Blog</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Contact Us</a>
+          <a class="nav-link trn" href="index.html">Contact Us</a>
         </li>
       </ul>
 
@@ -266,6 +266,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/jquery.translate.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(function () {
