--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -12,11 +12,11 @@
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p><span class="trn">Are you a drone operator or a farmer flying your own drone?</span> <button class="trn" type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="index.html"><img src="img/logos/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
-      <ul class="nav navbar-nav">
+      <ul id="parent-list" class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html"><span class="trn">Products</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item stacked-nav">
           <a class="nav-link" href="#"><span class="trn">Enterprise Software</span></a>
           <ul>
            <li><a class="nav-link trn" href="wineflight.html">Wine Flight</a></li>
@@ -34,6 +34,20 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link trn" href="index.html">Contact Us</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link trn" href="index.html">Contact Us</a>
+        </li>
+
+        <li class="nav-item stacked-nav language">
+          <a class="nav-link"><span>English</span></a>
+          <ul>
+           <li><a data-language="en" class="nav-link">English</a></li>
+           <li><a data-language="sp" class="nav-link">Español</a></li>
+          </ul>
+
+          <i class="fa fa-caret-down"></i>
         </li>
       </ul>
 
@@ -66,14 +80,14 @@
           <a href="wineflight.html">
             <img src="img/Home-Page_Wine Industry.png" alt=""/>
             <h2 class="trn">Wine Industry</h2>
-            <p class="trn">Learn more >></p>
+            <p class="trn">Learn more</p>
           </a>
         </div>
         <div class="col-sm-12 col-md-4">
           <a href="instafarm.html">
             <img src="img/Home-Page_Avocado.png" alt=""/>
             <h2 class="trn">Fruit & Nut Production</h2>
-            <p class="trn">Learn more >></p>
+            <p class="trn">Learn more</p>
           </a>
         </div>
 
@@ -162,32 +176,34 @@
 
     <div class="container-fluid">
       <div id="contact-us" class="row">
-        <h1>Get in touch with us</h1>
+        <h1 class="trn">Get in touch with us</h1>
         <form class="" action="index.html" method="post">
           <div class="col-sm-6">
-            <input type="text" name="name" value="" placeholder="First Name">
+            <label class="trn" for="">First Name</label>
+            <input type="text" name="name" value="" placeholder="">
           </div>
           <div  class="col-sm-6">
-            <input type="text" name="name" value="" placeholder="Last Name">
+            <label class="trn" for="">Last Name</label>
+            <input type="text" name="name" value="" placeholder="">
           </div>
 
           <div class="col-sm-6">
-            <label for="">E-Mail</label>
+            <label class="trn" for="">E-Mail</label>
             <input type="text" name="name" value="">
           </div>
           <div  class="col-sm-6">
-            <label for="">Location</label>
+            <label class="trn" for="">Location</label>
             <input type="text" name="name" value="">
           </div>
 
           <div  class="col-sm-12">
-            <label for="">Message</label>
+            <label class="trn" for="">Message</label>
             <textarea name="message"></textarea>
           </div>
 
           <div class="col-sm-12">
             <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
-            <button type="button" name="button">SEND</button>
+            <button class="trn" type="button" name="button">SEND</button>
           </div>
         </form>
       </div>
