--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="our_pruducts.html"><span class="trn">Products</span></a>
         </li>
         <li class="nav-item stacked-nav">
-          <a class="nav-link" href="#"><span class="trn">Enterprise Software</span></a>
+          <a class="nav-link first" href="#"><span class="trn">Enterprise Software</span></a>
           <ul>
            <li><a class="nav-link trn" href="wineflight.html">Wine Flight</a></li>
            <li><a class="nav-link trn" href="instafarm.html">Instafarm</a></li>
@@ -41,7 +41,7 @@
         </li>
 
         <li class="nav-item stacked-nav language">
-          <a class="nav-link"><span>English</span></a>
+          <a class="nav-link first"><span>English</span></a>
           <ul>
            <li><a data-language="en" class="nav-link">English</a></li>
            <li><a data-language="sp" class="nav-link">Español</a></li>
