--- a/app/home.html
+++ b/app/home.html
@@ -13,7 +13,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
   	<link href="app/assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
   	<link href="app/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  	<link href=".app/assets/css/core.css" rel="stylesheet" type="text/css">
+  	<link href="app/assets/css/core.css" rel="stylesheet" type="text/css">
   	<link href="app/assets/css/components.css" rel="stylesheet" type="text/css">
   	<link href="app/assets/css/colors.css" rel="stylesheet" type="text/css">
   	<!-- /global stylesheets -->
