--- a/app/home.html
+++ b/app/home.html
@@ -35,7 +35,7 @@
   	<!-- /theme JS files -->
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./app/css/main.css">
     <!-- endinject -->
 
   </head>
