--- a/app/salesObjectives.html
+++ b/app/salesObjectives.html
@@ -57,11 +57,11 @@
     	<div class="navbar-collapse collapse" id="navbar-mobile">
     		<ul class="nav navbar-nav">
     			<li>
-    				<a href="home.html">Sales Validation</a>
+    				<a href="app/home.html">Sales Validation</a>
     			</li>
 
           <li>
-            <a href="salesObjectives.html">Sales Objective</a>
+            <a href="app/salesObjectives.html">Sales Objective</a>
           </li>
     		</ul>
 
