Setting up equipment validaion.

--- a/app/home.html
+++ b/app/home.html
@@ -55,11 +55,15 @@
       <div class="navbar-collapse collapse" id="navbar-mobile">
         <ul class="nav navbar-nav">
           <li>
-            <a href="app/home.html">Sales Validation</a>
+            <a href="/app/home.html">Sales Validation</a>
           </li>
 
           <li>
-            <a href="app/salesObjectives.html">Sales Objective</a>
+            <a href="/app/salesObjectives.html">Sales Objective</a>
+          </li>
+
+          <li>
+            <a href="/app/equipmentValidation.html">Equipment Objective</a>
           </li>
         </ul>
 
