--- a/app/salesObjectives.html
+++ b/app/salesObjectives.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <base href="/">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <base href="/">
+  <title></title>
 
-    <!-- <link rel="stylesheet" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 
-    <!-- Global stylesheets -->
-  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  	<link href="./app/assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
-  	<link href="./app/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  	<link href="./app/assets/css/core.css" rel="stylesheet" type="text/css">
-  	<link href="./app/assets/css/components.css" rel="stylesheet" type="text/css">
-  	<link href="./app/assets/css/colors.css" rel="stylesheet" type="text/css">
+  <!-- Global stylesheets -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
+  <link href="./app/assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
+  <link href="./app/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="./app/assets/css/core.css" rel="stylesheet" type="text/css">
+  <link href="./app/assets/css/components.css" rel="stylesheet" type="text/css">
+  <link href="./app/assets/css/colors.css" rel="stylesheet" type="text/css">
+  <!-- /global stylesheets -->
 
-  	<!-- /global stylesheets -->
+  <!-- Core JS files -->
+  <script type="text/javascript" src="./app/assets/js/plugins/loaders/pace.min.js"></script>
+  <script type="text/javascript" src="./app/assets/js/core/libraries/jquery.min.js"></script>
+  <script type="text/javascript" src="./app/assets/js/core/libraries/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./app/assets/js/plugins/loaders/blockui.min.js"></script>
+  <!-- /core JS files -->
 
-  	<!-- Core JS files -->
-  	<script type="text/javascript" src="./app/assets/js/plugins/loaders/pace.min.js"></script>
-  	<script type="text/javascript" src="./app/assets/js/core/libraries/jquery.min.js"></script>
-  	<script type="text/javascript" src="./app/assets/js/core/libraries/bootstrap.min.js"></script>
-  	<script type="text/javascript" src="./app/assets/js/plugins/loaders/blockui.min.js"></script>
-  	<!-- /core JS files -->
+  <!-- Theme JS files -->
+  <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3.min.js"></script>
+  <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
+  <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/datatables.min.js"></script>
+  <script type="text/javascript" src="./app/assets/js/plugins/forms/selects/select2.min.js"></script>
+  <!-- <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/select.min.js"></script> -->
+  <!-- <script type="text/javascript" src="./app/assets/js/core/app.js"></script> -->
+  <!-- <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script> -->
 
-  	<!-- Theme JS files -->
-    <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3.min.js"></script>
-    <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
-  	<script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="./app/assets/js/plugins/forms/selects/select2.min.js"></script>
-    <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/select.min.js"></script>
-    <script type="text/javascript" src="./app/assets/js/core/app.js"></script>
-  	<script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script>
-    <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/col_reorder.min.js"></script>
+  <!-- /theme JS files -->
 
-  	<!-- /theme JS files -->
-
-    <!-- inject:css -->
-    <link rel="stylesheet" href="./app/css/main.css">
-    <!-- endinject -->
+  <!-- inject:css -->
+  <link rel="stylesheet" href="./app/css/main.css">
+  <!-- endinject -->
 
   </head>
   <body>
@@ -55,15 +53,19 @@
     	</div>
 
     	<div class="navbar-collapse collapse" id="navbar-mobile">
-    		<ul class="nav navbar-nav">
-    			<li>
-    				<a href="app/home.html">Sales Validation</a>
-    			</li>
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="/app/home.html">Sales Validation</a>
+          </li>
 
           <li>
-            <a href="app/salesObjectives.html">Sales Objective</a>
+            <a href="/app/salesObjectives.html">Sales Objective</a>
           </li>
-    		</ul>
+
+          <li>
+            <a href="/app/equipmentValidation.html">Equipment Objective</a>
+          </li>
+        </ul>
 
     		<ul class="nav navbar-nav navbar-right">
     			<li class="dropdown dropdown-user">
@@ -222,7 +224,7 @@
 
                   <div class="row">
 
-                    <div class="col-sm-4 col-md-6">
+                    <div class="col-sm-12 col-md-12">
                       <div class="panel panel-flat">
                         <div class="panel-heading">
                           <h5 class="panel-title">Venta Año Pasado</h5>
@@ -238,8 +240,7 @@
                     </div>
 
                     <!-- Basic datatable -->
-                    <div class="col-sm-8 col-md-6">
-
+                    <div class="col-sm-4 col-md-4">
                       <div class="panel panel-flat">
                         <div class="panel-body">
                           <div class="table-responsive">
@@ -276,7 +277,9 @@
                           </div>
         								</div>
             					</div>
+                    </div>
 
+                    <div class="col-sm-8 col-md-8">
                       <div class="panel panel-flat">
             						<div class="panel-heading">
             							<h5 class="panel-title">Current Month</h5>
@@ -390,7 +393,6 @@
         		<!-- /page content -->
 
         	</div>
-
 
     	</div>
   </body>
