added home page and picos page.

--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -57,7 +57,7 @@
           </li>
 
           <li>
-            <a href="/app/salesObjectives.html">Sales Objective</a>
+            <a href="/app/profilePage.html">Profile Page</a>
           </li>
 
           <li>
