--- a/app/profilePage.html
+++ b/app/profilePage.html
@@ -108,60 +108,52 @@
         				<!-- Content area -->
         				<div class="content">
 
-        					<!-- Basic datatable -->
-                  <div class="panel panel-flat">
-
-                    <div class="panel-heading">
-        							<h5 class="panel-title">Product Validation: Pueblo</h5>
-                      <div class="calculations">
-                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> compleated</h5>
-                        <div id="myTest" style="width:60px; height:60px; position: absolute; right: 0px; top: 0;">
-
+                  <div class="row">
+                    <div class="col-md-6">
+                      <!-- Basic datatable -->
+                      <div class="panel panel-primary">
+                        <div class="panel-heading">
+                          <h5 class="panel-title">Hola Mellisa Barral</h5>
+                        </div>
+                        <div class="panel-body">
+                          <div class="imageContainer">
+                            <img src="./app/img/clients-mendez-company.jpg" alt="">
+                            <div class="storeTypesProfile">
+                              <h6>Your store types:</h6>
+                              <p>Cash & Carry, C-Store, Military, Modern Trade, Pharmacy, Traditional Off</p>
+                            </div>
+                          </div>
                         </div>
                       </div>
-                      <hr>
-                      <input id="inputBrand" type="text" class="form-control" style="width: 350px; float:left; margin-right:20px;" placeholder="Brand:">
-                      <input id="inputEquipment" type="text" class="form-control" style="width: 350px;" placeholder="Equipment Type:">
+                      <!-- /basic datatable -->
                     </div>
-
-                    <div class="panel-body">
-                      <div class="tabbable">
-                        <ul class="nav nav-tabs">
-                          <li class="active"><a href="#tableBeer" data-table="tableBeer" data-toggle="tab" aria-expanded="false">Beer</a></li>
-                          <li class=""><a href="#tableSpirits" data-table="tableSpirits" data-toggle="tab" aria-expanded="true">Spirits</a></li>
-                          <li class=""><a href="#tableWines"  data-table="tableWines" data-toggle="tab" aria-expanded="true">Wines</a></li>
-                        </ul>
-
-                        <div class="tab-content">
-                          <div class="tab-pane active" id="tableBeer">
-                            <table  class="table tableBeer datatable-basic">
-
-                            </table>
+                    <div class="col-md-6">
+                      <!-- Basic datatable -->
+                      <div class="panel panel-primary">
+                        <div class="panel-heading">
+                          <h5 class="panel-title">Your Stores</h5>
+                        </div>
+                        <div class="store">
+                          <div class="companyLogo col-md-2">
+                            <img src="http://www.pueblo.net/sites/pueblo.net/files/logo_pueblo_rojo_0.png" alt="">
                           </div>
-
-                          <div class="tab-pane" id="tableSpirits">
-                            <table  class="table tableSpirits datatable-basic">
-
-                            </table>
+                          <div class="compannyNumberName col-md-10">
+                            <h2>120398 || Pueblo</h2>
                           </div>
+                        </div>
 
-                          <div class="tab-pane" id="tableWines">
-                            <table  class="table tableWines datatable-basic">
-
-                            </table>
+                        <div class="store">
+                          <div class="companyLogo col-md-2">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/7-eleven-brand.svg/2000px-7-eleven-brand.svg.png" alt="">
+                          </div>
+                          <div class="compannyNumberName col-md-10">
+                            <h2>120398 || 7Eleven</h2>
                           </div>
                         </div>
                       </div>
+                      <!-- /basic datatable -->
                     </div>
                   </div>
-        					<!-- /basic datatable -->
-
-        					<!-- Footer -->
-        					<div class="footer text-muted">
-        						&copy; 2015. <a href="#">Limitless Web App Kit</a> by <a href="http://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
-        					</div>
-        					<!-- /footer -->
-
         				</div>
         				<!-- /content area -->
 
