--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -63,6 +63,10 @@
           <li>
             <a href="/app/equipmentValidation.html">Equipment Objective</a>
           </li>
+
+          <li>
+            <a href="/app/planificasionPicos.html">Planificasion Picos</a>
+          </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
